<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lreg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_in_title"
        android:textColor="@color/fui_bgGitHub"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in_desc"
        android:textColor="@color/fui_bgFacebook"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/Reg_Name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_person_black"
                android:ems="10"
                android:hint="@string/name_sign_in"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHint="@color/browser_actions_title_color"
                android:textSize="16dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Reg_Sur"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_person_black"
                android:ems="10"
                android:hint="@string/surname_sign_in"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHint="@color/browser_actions_title_color"
                android:textSize="16dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/Reg_Mail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_mail_black"
                android:ems="10"
                android:hint="@string/mail_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHint="@color/browser_actions_title_color"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"

            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/Reg_Pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_pass_black"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHint="@color/browser_actions_title_color"
                android:textSize="16dp" />

        </LinearLayout>


        <Button
            android:id="@+id/signinButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_blue1"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:elegantTextHeight="true"
            android:fontFamily="sans-serif"
            android:freezesText="false"
            android:linksClickable="true"
            android:text="@string/login_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/fui_bgFacebook"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />


    </LinearLayout>

</LinearLayout>