<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lreg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/techlogo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/Login_Username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_mail_black"
            android:ems="10"
            android:hint="@string/mail_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/browser_actions_title_color"
            android:textColorLink="@color/fui_bgEmail"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"

        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_pass_black"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/browser_actions_title_color"
            android:textColorLink="@color/fui_bgEmail"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/recover_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:elegantTextHeight="true"
            android:fontFamily="sans-serif"
            android:freezesText="false"
            android:linksClickable="true"
            android:text="@string/recover_password"
            android:textAllCaps="false"
            android:textColor="@color/fui_bgFacebook"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_blue1"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/or_login" />


    <Button
        android:id="@+id/link_rec_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_blue_scolor"
        android:text="@string/registation_link_text"
        android:textAllCaps="false"
        android:textColor="@color/fui_bgFacebook"
        android:textSize="18sp" />


</LinearLayout>